minor wireframe changes

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 
 					<div class="col-sm-8 col-md-8 col-lg-8">
-						<p><small><img class="img-responsive" src="assets/images/linking-screenshot.png" alt="screenshot of GitHub linking with CodeConvo.com"></small>
+						<p><small><img class="img-responsive" src="assets/images/linking-screenshot.png" alt="Screenshot of alcohol database"></small>
 						</p>
 					</div>
 				</div>
@@ -184,7 +184,7 @@
 
 
 					<div class="col-sm-8 col-md-8 col-lg-8">
-						<p><small><img class="img-responsive" src="assets/images/commenting-screenshot.png" alt="screenshot of Vinum Viate save system"></small>
+						<p><small><img class="img-responsive" src="assets/images/commenting-screenshot.png" alt="screenshot of Vinum Vitae save system"></small>
 						</p>
 					</div>
 				</div>
