some new stuff for  serverside, and pointed landing page to our stylesheet

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://bootswatch.com/spacelab/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<link href="assets/css/style.css" rel="stylesheet">
+	<link href="app/public/css/style.css" rel="stylesheet">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js">
 	</script>
