--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html>
@@ -9,208 +10,287 @@
 	</script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	</script>
-	<script src="assets/js/app.js">
+	<script src="assets/js/app.js">-->
 	</script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://bootswatch.com/spacelab/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<link href="app/public/css/style.css" rel="stylesheet">
+	<link href="front.css" rel="stylesheet">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js">
+
 	</script>
 
-	<!-- Google Analyitics Tracking Code -->
-       <!-- <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-102515248-1', 'auto');
-          ga('send', 'pageview');
-
-        </script> -->
 </head>
 
 <body>
 	<div class="carousel fade-carousel slide" data-interval="4000" data-ride="carousel" id="bs-carousel">
-
-
 		<ol class="carousel-indicators">
 			<li class="active" data-slide-to="0" data-target="#bs-carousel">
 			</li>
-
-
 			<li data-slide-to="1" data-target="#bs-carousel">
 			</li>
-
-
 			<li data-slide-to="2" data-target="#bs-carousel">
 			</li>
 		</ol>
 		<!-- Wrapper for slides -->
 
-
 		<div class="carousel-inner">
 			<div class="item slides active">
-				<div class="slide-1">
-				</div>
+				<div class="slide-1"></div>
+					<div class="slide1">
+						<div class="row">
+							<div class="col-md-6">
+								<hgroup class="strokeme">
+									<div class="uppertext">
+										<h1>Vinum Vitae</h1>
+										<h2>   -Wine of Life</h2>
+										<h3>Personalized wine recording system that remembers and records your favorite wines.</h3>
+									</div>
+								</hgroup>
+									<div>
+										<div>
+										<!-- GitHub Sign-In-->
+											<a class="btn btn-success btn-lg github-signin-btn align-right" role="button">Sign in!</a>
+										</div>
+									</div>
+                    					<div>
+                        					<p class="strokeme">(scroll down for more info)</p>
+                        					<span class="glyphicon glyphicon-arrow-down strokeme"></span>
+			        					</div>
+			        		</div> <!--end col for text-->
 
+			        		<div class="col-md-5">
+			        			<img src="app/public/images/sunset.jpg" alt="Sonoma Sunset" style="width:500px; height: 270px; margin-top: 10px">
+			        		</div> <!--close col 5 for image -->
 
-				<div class="hero">
-					<hgroup class="strokeme">
-						<h1>Vinum Vitae</h1>
-
-
-						<h3>Up for some fermented grape juice?</h3>
-					</hgroup>
-
-
-					<div>
-						<div>
-							<!-- GitHub Sign-In-->
-							<a class="btn btn-success btn-lg github-signin-btn" role="button">Sign in!</a>
-						</div>
-					</div>
-
-                    <div>
-                        <p class="strokeme">(scroll down for more info)</p>
-                        <span class="glyphicon glyphicon-arrow-down strokeme"></span>
-			        </div>
-				</div>
+			        		<div class="col-md-1">
+			        		</div> <!--placholder for col at end -->
+			      		</div> <!--close row-->
+					</div>  <!-- end of slide one div -->
 			</div>
-
 
 			<div class="item slides">
-				<div class="slide-2">
-				</div>
+				<div class="slide-2"></div>
+					<div class="slide2">
+						<div class="row">
+							<div class="col-md-6">
+								<hgroup class="strokeme">
+									<div class="uppertext">
+										<h1>Vinum Vitae</h1>
+										<h2>   -Wine of Life</h2>
+										<h3>Record your favorite wines, find current reviews, and all information relevant to your glass of vino!</h3>
+									</div>
+								</hgroup>
+								<div>
+									<div>
+										<!-- GitHub Sign-In-->
+										<a class="btn btn-success btn-lg github-signin-btn" role="button">Sign in!</a>
+									</div>
+								</div>
 
+                    			<div>
+                       				<p class="strokeme">(scroll down for more info)</p>
+                        			<span class="glyphicon glyphicon-arrow-down strokeme"></span>
+			        			</div>
+			       			</div> <!-- end div for col 6 -->
 
-				<div class="hero">
-					<hgroup class="strokeme">
-						<h1>Vinum Vitae</h1>
+			       			<div class="col-md-5">
+			        			<img src="app/public/images/winebarrels.jpg" alt="Red Wine" style="width:500px; height: 270px; margin-top: 10px">
+			       			</div> <!--close col 5 for image -->
 
-
-						<h3>Alcohol is technically a solution</h3>
-					</hgroup>
-
-
-					<div>
-						<div>
-							<!-- GitHub Sign-In-->
-							<a class="btn btn-success btn-lg github-signin-btn" role="button">Sign in!</a>
-						</div>
+			        		<div class="col-md-1">
+			        		</div> <!--placholder for col at end -->
+			      		</div> <!--close row-->
 					</div>
-
-                    <div>
-                       <p class="strokeme">(scroll down for more info)</p>
-                        <span class="glyphicon glyphicon-arrow-down strokeme"></span>
-			        </div>
-				</div>
 			</div>
-
 
 			<div class="item slides">
-				<div class="slide-3">
-				</div>
+				<div class="slide-3"></div>
+					<div class="slide3">
+						<div class="row">
+							<div class="col-md-6">
+								<hgroup class="strokeme">
+									<div class="uppertext">
+										<h1>Vinum Vitae</h1>
+										<h2>   -Wine of Life</h2>
+										<h3>Prefer beer?  You are in the majority! Find and record your favorite beer here.  Everything you need to know about your pint is available now.</h3>
+									</div>
+								</hgroup>
+							<div>
+								<div>
+									<!-- GitHub Sign-In-->
+									<a class="btn btn-success btn-lg github-signin-btn" role="button">Sign in!</a>
+								</div>
+							</div>
+                    			<div>
+                       				<p class="strokeme">(scroll down for more info)</p>
+                        			<span class="glyphicon glyphicon-arrow-down strokeme"></span>
+			        			</div>
+			       			</div> <!-- end div for col 6 -->
 
+			       			<div class="col-md-5">
+			        			<img src="app/public/images/beerimage.jpg" alt="Beer" style="width:500px; height: 270px; margin-top: 10px">
+			       			</div> <!--close col 5 for image -->
 
-				<div class="hero">
-					<hgroup class="strokeme">
-						<h1>Code Convo</h1>
-
-
-						<h3>Don't make this website pretentious</h3>
-                        
-					</hgroup>
-
-
-					<div>
-						<div>
-							<!-- GitHub Sign-In-->
-							<a class="btn btn-success btn-lg github-signin-btn" role="button">Sign in!</a>
-						</div>
+			        		<div class="col-md-1">
+			        		</div> <!--placholder for col at end -->
+			      		</div> <!--close row-->
 					</div>
-
-				    <div>
-                        <p class="strokeme">(scroll down for more info)</p>
-                        <span class="glyphicon glyphicon-arrow-down strokeme"></span>
-			        </div>
-				</div>
-			</div>
-		</div>
+				</div> <!--close item three -->
+		</div><!--carosel -->
 	</div>
 
 
-	<div class="container">
-
+	<div class="container one">
+		
+		<div class="row">
+			<div class="space"></div>
+		</div>
+		<div class="row">
+			<br>
+			<p class="main-info-title">A Valuable Service That You'll Always Return For All Of Your Wine And Beer Information Storage Needs!</p>
+			<p class="main-info-info">Vinum Vitae is the premier website for all things alcohol. Find out about that rare vintage or a new IPA. And when you decide you need more, login to access your distinctive list and order more. </p>
+			<br>
+		</div>
 
 		<div class="row">
-			<div class="jumbotron">
-				<h2>Who are we?</h2>
-				<h3>Vinum Vitae is a website for all things alcohol! Hop on Vinum Vitae to find and save wines and beers to pick up in the future.</h3>
+			<div class="col-sm-3 col-md-3 col-lg-3">
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-6" id="line">
+			</div>
+			<div class="col-sm-3 col-md-3 col-lg-3">
+			</div>
+		</div> <!-- close row to create line -->
+
+		<div class="row">
+			<div class="space">
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="space">
+			</div>
+		</div>
+
+		<div class="row" style="align-items: center; text-align: center">
+			<div class="col-md-3">
+			</div>
+			<div class="col-md-3">
+			<p class="main-info-info">Add My Wine</p>
+			<p class="main-info-info">Or Lookup Wine Information</p>
+			 <button type="button" class="custom-button">Add My Wine!</button>
+			</div>
+			<div class="col-md-3">
+			<p class="main-info-info">Add My Beer</p>
+			<p class="main-info-info">Or Lookup Beer Information</p>
+			 <button type="button" class="custom-button">Add My Beer!</button>
+			</div>
+			<div class="col-md-3">
+			</div>
+
+		</div>
+		
+		<div class="row">
+			<div class="space">
+			</div>
+		</div>
+		<div class="row">
+			<div class="space">
+			</div>
+		</div>
+		<div class="row">
+			<div class="space">
 			</div>
 		</div>
 
 
-		<div class="row">
+
+		<div class="row-small">
 			<div class="panel panel-success">
 				<div class="panel-heading">
-					<h2 class="panel-title">GitHub Linking</h2>
+					<h4 class="panel-title">Title</h4>
 				</div>
 				<div class="panel-body">	
-					<div class="col-sm-4 col-md-4 col-lg-4">
+					<div class="col-sm-3 col-md-3 col-lg-3">
 						<p>With our state of art wine database, all you'll have to do is search for the wine or beer you're interested in, save it, and we'll handle the rest. This will leave you more time to actually enjoy your wine or beer instead of worrying about which one you had for dinner last night. On Vinum Vitae, you can discover the answers to all the wine questions you've been dying to ask, but never had the tools for.</p>
 					</div>
-
-
-					<div class="col-sm-8 col-md-8 col-lg-8">
-						<p><small><img class="img-responsive" src="assets/images/linking-screenshot.png" alt="Screenshot of alcohol database"></small>
+					<div class="col-sm-5 col-md-5 col-lg-5">
+						<p><small><img class="img-responsive" src="./app/public/img/linking-screenshot.png" alt="Screenshot of alcohol database"></small>
 						</p>
 					</div>
+						<div class="outer">
+						<img class="img-responsive" src=".jpg">
+						</div>
 				</div>
 			</div>
 		</div>
 
-
 		<div class="row">
+			<div class="space"></div>
+		</div>
+		<div class="row">
+			<div class="space">
+			</div>
+		</div>
+
+		<div class="row-small">
 			<div class="panel panel-success">
 				<div class="panel-heading">
 					<h2 class="panel-title">Comment System</h2>
 				</div>
 				<div class="panel-body">
-					<div class="col-sm-4 col-md-4 col-lg-4">
+					<div class="col-sm-3 col-md-3 col-lg-3">
 						<p>The great thing about Vinum Viate is that we have no problem with the amount of booze you drink. That's your problem, not ours.</p>
 					</div>
-
-
-					<div class="col-sm-8 col-md-8 col-lg-8">
+					<div class="col-sm-5 col-md-5 col-lg-5">
 						<p><small><img class="img-responsive" src="assets/images/commenting-screenshot.png" alt="screenshot of Vinum Vitae save system"></small>
 						</p>
 					</div>
+						<div class="outer">
+							<img class="img-responsive" src="app/public/img/vines.jpg">
+						</div>
 				</div>
 			</div>
 		</div>
 
-
 		<div class="row">
+			<div class="space">
+			</div>
+		</div>
+		<div class="row">
+			<div class="space">
+			</div>
+		</div>
+
+		<div class="row-small">
 			<div class="panel panel-success">
 				<div class="panel-heading">
 					<h2 class="panel-title">No Exploitative Posts</h2>
 				</div>
 				<div class="panel-body">
-					<div class="col-sm-4 col-md-4 col-lg-4">
-						<p>At Vinum Viate, we have a healthy database linked with thousands of wines and beers. If people drink it, we probably know about it.</p>
+					<div class="col-sm-3 col-md-3 col-lg-3">
+						<p>At Vinum Viate, we have a healthy database linked with thousands of wines and beers. If people drink it, we probably know about it.</p>		
 					</div>
-
-
-					<div class="col-sm-8 col-md-8 col-lg-8">
+					
+					<div class="col-sm-5 col-md-5 col-lg-5">
 						<p><small><img class="img-responsive" src="assets/images/CodeConvoDemo.jpg" alt="Girl points to Vinum Vitae website."></small>
 						</p>
+
 					</div>
+						<div class="outer">
+							<img class="img-responsive" src="app/public/img/vines.jpg">
+						</div>
 				</div>
 			</div>
 		</div>
+		<div class="row">
+			<div class="space">
+			</div>
+		</div>
+
 	</div>
+
 
 	<div class="footer-bottom">
 
@@ -232,7 +312,7 @@
 
 					<div class="design">
 
-						<a href="#">Vinum Vitae </a> |  Web Design & Development by Cory Lozon, Adrian Fahrer, and <a href="christopher-rackley.com"> Chris Rackley </a>
+						<a href="#">Vinum Vitae </a> |  Web Design & Development by <a href="corylozon.com">Cory Lozon,<a href="FahrerDesign.com"> Adrian Fahrer,</a> and <a href="christopher-rackley.com"> Chris Rackley </a>
 
 					</div>
 
