--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 								<div class="uppertext">
 									<h1>Vinum Vitae</h1>
 									<h2>   -Wine of Life</h2>
+									<span class="icon-heart"></span> icon-heart
 									<h3>Record your top wines, find current reviews, and all information relevant to your glass of vino!</h3>
 								</div>
                     			<div>
@@ -152,37 +153,7 @@
 			<div class="space">
 			</div>
 		</div>
-		<div class="row">
-			<br>
-			<div class="col-sm-2 col-md-2 col-lg-2">
-			</div>
-			<div class="col-sm-8 col-md-8 col-lg-8">
-				<div class="shadow">
-				<p class="main-info-title">A Valuable Service That You'll Always Return For All Of Your Wine And Beer Information Storage Needs!</p>
-				<p class="main-info-info">Vinum Vitae is the premier website for all wine and beer information. Find out about that rare vintage or a new IPA. And when you decide you need more, login to access your distinctive list and order more. </p>
-				<br>
-				</div>
-			</div>
-			<div class="col-sm-2 col-md-2 col-lg-2">
-			</div>
-		</div>
-
-		<div class="row">
-			<br>
-			<div class="col-sm-2 col-md-2 col-lg-2">
-			</div>
-			<div class="col-sm-8 col-md-8 col-lg-8">
-				<div class="box effect">
-				<p class="main-info-title">A Valuable Service That You'll Always Return For All Of Your Wine And Beer Information Storage Needs!</p>
-				<p class="main-info-info">Vinum Vitae is the premier website for all wine and beer information. Find out about that rare vintage or a new IPA. And when you decide you need more, login to access your distinctive list and order more. </p>
-				<br>
-				</div>
-			</div>
-			<div class="col-sm-2 col-md-2 col-lg-2">
-			</div>
-		</div>
-
-
+		
 
 		<div class="row">
 			<div class="col-sm-3 col-md-3 col-lg-3">
@@ -193,36 +164,31 @@
 			</div>
 		</div> <!-- close row to create line -->
 
-		<div class="row">
-			<div class="space">
+		<div class="row-small">
+			<div class="panel panel-success">
+				<div class="panel-heading"  id="panelchange">
+					<h4 class="panel-title" style="font-size: 24px">Wine And Beer Information Created Just For You</h4>
+				</div>
+				<div class="panel-body" id="paperbackground">	
+					<div class="col-sm-6 col-md-6 col-lg-6" id="border">
+						<p>A Valuable Service That You'll Always Return For All Of Your Wine And Beer Information Storage Needs!  Vinum Vitae is the premier website for all wine and beer information. Find out about that rare vintage or a new IPA. And when you decide you need more, login to access your distinctive list and order more.</p>
+						<br>
+						<div class = "row">
+							<div class="col-sm-3 col-md-3 col-lg-3"></div>
+							<div class="col-sm-6 col-md-6 col-lg-6">
+								<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span>Sign in!</a></button></div>
+							<div class="col-sm-3 col-md-3 col-lg-3"></div>
+						</div>
+					</div>
+					<div class="col-sm-1 col-md-1 col-lg-1">
+					</div>
+					<div class="col-sm-5 col-md-5 col-lg-5">
+						<p><img class="img-frontpage" src="app/public/images/newwineglass.jpg" alt="Wine Glass"></p>
+					</div>
+				</div>
 			</div>
 		</div>
 
-		<div class="row">
-			<div class="space">
-			</div>
-		</div>
-
-		<div class="row" style="align-items: center; text-align: center">
-			<div class="col-md-3">
-			</div>
-			<!-- <div class="col-md-3">
-				<p class="main-info-info">Add My Wine</p>
-				<button type="button" class="custom-button"><span class ="glyphicon glyphicon-plus"></span>Add My Wine!</a>
-				<p class="main-info-info">Or Lookup Wine Information</p>
-				 <button type="button" class="custom-button">Add My Wine!</button>
-			</div>
-			<div class="col-md-3">
-				<p class="main-info-info">Add My Beer</p>
-				<button type="button" class="custom-button">Add My Beer!</button>
-				<p class="main-info-info">Or Lookup Beer Information</p>
-			 	<button type="button" class="custom-button">Add My Beer!</button> -->
-			<!--</div>-->
-			<div class="col-md-3">
-			</div>
-
-		</div>
-		
 		<div class="row">
 			<div class="space">
 			</div>
@@ -231,112 +197,80 @@
 		<div class="row-small">
 			<div class="panel panel-success">
 				<div class="panel-heading"  id="panelchange">
-					<h4 class="panel-title">About Vinum Vitae</h4>
+					<h4 class="panel-title" style="font-size: 24px">About Vinum Vitae</h4>
 				</div>
 				<div class="panel-body" id="paperbackground">	
-					<div class="col-sm-6 col-md-6 col-lg-6">
+					<div class="col-sm-6 col-md-6 col-lg-6" id="border">
 						<p>With our state of art wine database, all you'll have to do is search for the wine or beer you're interested in, save it, and we'll handle the rest. This will leave you more time to actually enjoy your wine or beer instead of worrying about which one you had for dinner last night. On Vinum Vitae, you can discover the answers to all the wine questions you've been dying to ask, but never had the tools for.</p>
 					</div>
 					<div class="col-sm-1 col-md-1 col-lg-1">
 					</div>
 					<div class="col-sm-5 col-md-5 col-lg-5">
-						<p><img class="img-responsive" src="app/public/images/winetop.jpg" alt="Screenshot of alcohol database"></p>
+						<p><img class="img-frontpage" src="app/public/images/winetop.jpg" alt="Screenshot of alcohol database"></p>
 					</div>
 				</div>
 			</div>
 		</div>
+		<div class="row">
+			<div class="space">
+			</div>
+		</div>
+
+<!-- =========================== -->
+
+		<div class="row-small">
+			
+			<div class="col-sm-5 col-md-5 col-lg-5">
+				<div class="panel panel-success">
+					<div class="panel-heading"  id="panelchange">
+					<h4 class="panel-title" style="font-size: 20px">General Search</h4>
+					</div>
+				<div class="panel-body" id="paperbackground">	
+					<div class="col-sm-12 col-md-12 col-lg-12" id="border">
+						<p>Do you want quick access to information for a specific wine?  Use our general search to find all of the wine details including reviews and average price.</p>
+					</div>
+				</div>
+				</div>
+			</div>
+
+			<div class="col-sm-2 col-md-2 col-lg-2">
+			</div>
+
+			<div class="col-sm-5 col-md-5 col-lg-5">
+				<div class="panel panel-success">
+					<div class="panel-heading"  id="panelchange">
+					<h4 class="panel-title" style="font-size: 20px">Discover New Wines</h4>
+					</div>
+				<div class="panel-body" id="paperbackground">	
+					<div class="col-sm-12 col-md-12 col-lg-12" id="border">
+						<p>See what critics are saying about the latest greatest wines</p>
+					</div>
+				</div>
+				</div>
+			</div>
+
+		</div>
+<!-- 
+	============== -->
+
+
+
 
 		<div class="row">
 			<div class="space"></div>
 		</div>
-		<div class="row">
-			<div class="space">
-			</div>
-		</div>
-
-		<div class="row-small">
-			<div class="panel panel-success">
-				<div class="panel-heading" id="panelchange">
-					<h2 class="panel-title">Comment System</h2>
-				</div>
-				<div class="panel-body" id="paperbackground">
-					<div class="col-sm-6 col-md-6 col-lg-6">
-						<p>The great thing about Vinum Viate is that we have no problem with the amount of booze you drink. That's your problem, not ours.</p>
-					</div>
-					<div class="col-sm-1 col-md-1 col-lg-1">
-					</div>
-					<div class="col-sm-5 col-md-5 col-lg-5">
-						<p><img class="img-responsive" src="assets/images/commenting-screenshot.png" alt="screenshot of Vinum Vitae save system"></p>
-					</div>
-						
-				</div>
-			</div>
-		</div>
 
 		<div class="row">
 			<div class="space">
 			</div>
 		</div>
+		
+		
 		<div class="row">
 			<div class="space">
 			</div>
 		</div>
 
-		<div class="row-small">
-			<div class="panel panel-success">
-				<div class="panel-heading" id="panelchange">
-					<h2 class="panel-title">No Exploitative Posts</h2>
-				</div>
-				<div class="panel-body" id="paperbackground">
-					<div class="col-sm-6 col-md-6 col-lg-6">
-						<p>At Vinum Viate, we have a healthy database linked with thousands of wines and beers. If people drink it, we probably know about it.</p>		
-					</div>
-					<div class="col-sm-1 col-md-1 col-lg-1">
-					</div>
-					<div class="col-sm-5 col-md-5 col-lg-5">
-						<p><img class="img-responsive" src="assets/images/CodeConvoDemo.jpg" alt="Vinum Vitae website.">
-						</p>
-
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="space">
-			</div>
-		</div>
-
-	</div>
-	</div>
-
-
-
-	<!-- <div class="container two">
-
-	<div class="row" style="align-items: center; text-align: center">
-			<div class="col-md-3">
-			</div>
-			<div class="col-md-3">
-				<p class="main-info-info">Add My Wine</p>
-				<button type="button" class="custom-button"><span class ="glyphicon glyphicon-plus"></span>Add My Wine!</a>
-				<p class="main-info-info">Or Lookup Wine Information</p>
-			
-			</div>
-			<div class="col-md-3">
-				<p class="main-info-info">Add My Beer</p>
-				<button type="button" class="custom-button">Add My Beer!</button>
-				<p class="main-info-info">Or Lookup Beer Information</p>
-			 	<button type="button" class="custom-button">Add My Beer!</button>
-			</div>
-			<div class="col-md-3">
-			</div>
-
-		</div>
-
-		</div> <!close container two-->
-
-
-
-	
 
 	<div class="container footer">
 		<div class="row">
@@ -357,15 +291,11 @@
 				<p>Join Our Mailing List</p>
 				<p>More Info</a></p>
 			</div>
-
-			
 		</div>
 
 		<div class = "row" id="copyright">
-		<p>© 2017, VinumVitae, All rights reserved</p>
+			<p>© 2017, VinumVitae, All rights reserved</p>
 		</div>
-
-		</div>
-	</div>
+	</div> <!--footer-->
 </body>
 </html>
