--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					<div class="col-sm-5 col-md-5 col-lg-5">
 						<p><img class="img-frontpage" src="app/public/images/newwineglass.jpg" alt="Wine Glass"></p>
 					</div>
-				</div>
+					</div>
 			</div>
 		</div>
 
@@ -209,7 +209,7 @@
 						<p><img class="img-frontpage" src="app/public/images/winetop.jpg" alt="Screenshot of alcohol database"></p>
 					</div>
 				</div>
-			</div>
+			
 		</div>
 		<div class="row">
 			<div class="space">
@@ -243,18 +243,47 @@
 					</div>
 				<div class="panel-body" id="paperbackground">	
 					<div class="col-sm-12 col-md-12 col-lg-12" id="border">
-						<p>See what critics are saying about the latest greatest wines</p>
+						<p>Read the most current reviews from people and what they are posting about the latest greatest wines.</p>
+						<input id="select-posts" type="submit" value="Posts">
 					</div>
 				</div>
-				</div>
 			</div>
+	</div>  
+	<!-- !==close gen search> -->
 
+		<div class="row">
+			<div class="space">
+			</div>
 		</div>
+
+		<div class="row">
+			<div class="space">
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="space">
+			</div>
+		</div>
+	
 <!-- 
 	============== -->
 
+	<div class="row-small-hide">
+        <div class="col-sm-12">
+            <br>
+            <div class="card card-body">
+                <div class="panel-heading" id="panelchange">
+                <h4 class="panel-title" style="font-size: 20px">What People Are Posting About Wine Favorites</h4>
+                </div>
+                <div class="panel-body" id="post-div"></div>
+            </div>
+             <input id="clear-posts" type="button" value="Close Posts">
+        </div>
+    </div>
 
-
+    <!-- 
+	============== -->
 
 		<div class="row">
 			<div class="space"></div>
@@ -271,6 +300,11 @@
 			</div>
 		</div>
 
+</div>
+</div>
+
+</div>
+
 
 	<div class="container footer">
 		<div class="row">
@@ -280,7 +314,7 @@
 			</div>
 
 			<div class="col-sm-4 col-md-4 col-lg-4" id ="develop">
-				<p>Web Design & Development</p>
+				<p>Web Design And Development</p>
 				<p><a href="FahrerDesign.com"> Adrian Fahrer</a></p>
 				<p><a href="CoryLozon.com">Cory Lozon</a></p>
 				<p><a href="christopher-rackley.com">Chris Rackley</a></p>
@@ -289,13 +323,17 @@
 			<div class="col-sm-4 col-md-4 col-lg-4" id ="ourapp">
 				<p>Misc Info</p>
 				<p>Join Our Mailing List</p>
-				<p>More Info</a></p>
+				<p>More Info</p>
+			</div>
+		</div>
+		<div class = "row" id="copyright">
+			<div class="col-sm-12 col-md-12 col-lg-12" id ="copyright">
+				<p>© 2017, VinumVitae, All rights reserved</p>
 			</div>
 		</div>
 
-		<div class = "row" id="copyright">
-			<p>© 2017, VinumVitae, All rights reserved</p>
-		</div>
 	</div> <!--footer-->
+	
+	<script type="text/javascript" src="function.js"></script>
 </body>
 </html>
