--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 			<br>
 			<br>
 			<br>
-			<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span>Sign in!</a></button>
-		</div>  <!-- close static col for header -->
+			<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span><a href="login.html">Log In</a></button>
+		</div>  <!-- close static col for header bootstrap function to get button click -->
 		
 		<div class="col-md-10">
 			<div class="carousel fade-carousel slide" data-interval="5000" data-ride="carousel" id="bs-carousel">
