--- a/searchmywine.html
+++ b/searchmywine.html
@@ -124,6 +124,10 @@
         </div>
 
     </div> <!--footer-->
+    <form method="POST" action="/wines" class="button-size" id="wineForm">
+        <input input type="hidden" type="text" name="wine_id" value="" id="userSelection"><br>
+        <button type="submit" class="btn btn-default">Devour it!</button>
+    </form>
 
 <script type="text/javascript" src="searchwinefunction.js"></script>
 </body>
