--- a/searchmywine.html
+++ b/searchmywine.html
@@ -99,8 +99,10 @@
 
 <div class="container footer">
         <div class="row">
-            <div class="col-sm-4 col-md-4 col-lg-4" id="footerlogo">
-                <p><img class="img-responsive" src="app/public/images/WhiteVNoBackground.png" alt="OurLogo"></p>
+
+            <div class="col-sm-4 col-md-4 col-lg-4">
+                <p><img class="img-responsive" src="app/public/images/WhiteVNoBackground.png" alt="OurLogo" id="footerlogo"></p>
+
                 <p>Vinum Vitae</p>
             </div>
 
