--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<div class="col-md-7">
 								<div class="uppertext">
 									<h1>Vinum Vitae</h1>
-									<h2>   -Wine of Life</h2>
+									<h2>   -Wine Of Life</h2>
 									<h3>A personalized wine recording system that remembers and records your favorite wines.</h3>
 								</div>
                     			<div>
@@ -81,7 +81,7 @@
 							<div class="col-md-7">
 								<div class="uppertext">
 									<h1>Vinum Vitae</h1>
-									<h2>   -Wine of Life</h2>
+									<h2>   -Wine Of Life</h2>
 									<span class="icon-heart"></span> icon-heart
 									<h3>Record your top wines, find current reviews, and all information relevant to your glass of vino!</h3>
 								</div>
@@ -105,7 +105,7 @@
 							<div class="col-md-7">
 								<div class="uppertext">
 									<h1>Vinum Vitae</h1>
-									<h2>   -Wine of Life</h2>
+									<h2>   -Wine Of Life</h2>
 									<h3>Prefer beer?  You are in the majority!</h3> <h3> Find and record your favorite beer here.  Everything you need to know about your pint is available now.</h3>
 								</div>
                     			<div>
@@ -173,21 +173,39 @@
 					<div class="col-sm-6 col-md-6 col-lg-6" id="border">
 						<p>A Valuable Service That You'll Always Return For All Of Your Wine And Beer Information Storage Needs!  Vinum Vitae is the premier website for all wine and beer information. Find out about that rare vintage or a new IPA. And when you decide you need more, login to access your distinctive list and order more.</p>
 						<br>
+
+					<!-- 	<	================> -->
 						<div class = "row">
-							<div class="col-sm-3 col-md-3 col-lg-3"></div>
-							<div class="col-sm-6 col-md-6 col-lg-6">
-								<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span>Sign in!</a></button></div>
-							<div class="col-sm-3 col-md-3 col-lg-3"></div>
+							<div class="col-sm-1 col-md-1 col-lg-1">
+							</div>
+
+							<div class="col-sm-11 col-md-11 col-lg-11" id="stylebox">
+							<p id="signininspiration">GET YOUR PERSONAL WINE CELLAR.</p>
+							<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span><a href="login.html">Log In</a></button>
+								
+							</div>
+							<!-- <div class="col-sm-4 col-md-4 col-lg-4">
+								<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span><a href="login.html">Log In</a></button>
+							</div> -->
+
+							<!-- <div class="col-sm-1 col-md-1 col-lg-1">
+							</div> -->
+
 						</div>
 					</div>
+
+					<!-- <<+++++++? -->
 					<div class="col-sm-1 col-md-1 col-lg-1">
 					</div>
 					<div class="col-sm-5 col-md-5 col-lg-5">
 						<p><img class="img-frontpage" src="app/public/images/newwineglass.jpg" alt="Wine Glass"></p>
 					</div>
-					</div>
+				</div> <!--close panel paper background -->
 			</div>
-		</div>
+		</div>  <!--close row small -->
+
+
+
 
 		<div class="row">
 			<div class="space">
@@ -242,9 +260,9 @@
 					<h4 class="panel-title" style="font-size: 20px">Discover New Wines</h4>
 					</div>
 				<div class="panel-body" id="paperbackground">	
-					<div class="col-sm-12 col-md-12 col-lg-12" id="border">
-						<p>Read the most current reviews from people and what they are posting about the latest greatest wines.</p>
-						<input id="select-posts" type="submit" value="Posts">
+					<div class="col-sm-12 col-md-12 col-lg-12" id="select-posts" type="submit">
+						<p>Click here to read the most current reviews from people and what they are posting about the latest greatest wines.</p>
+						<!-- <input id="select-posts" type="submit" value="Posts"> -->
 					</div>
 				</div>
 			</div>
@@ -305,15 +323,11 @@
 
 </div>
 
-
 	<div class="container footer">
 		<div class="row">
-
-
+		<br>
 			<div class="col-sm-4 col-md-4 col-lg-4">
 				<p><img class="img-responsive" src="app/public/images/WhiteVNoBackground.png" alt="OurLogo"  id="footerlogo"></p>
-
-				<p>Vinum Vitae</p>
 			</div>
 
 			<div class="col-sm-4 col-md-4 col-lg-4" id ="develop">
@@ -324,14 +338,15 @@
 			</div>
 
 			<div class="col-sm-4 col-md-4 col-lg-4" id ="ourapp">
-				<p>Misc Info</p>
-				<p>Join Our Mailing List</p>
-				<p>More Info</p>
+				<p>Vinum Vitae</p>
+				<p>     -Wine Of Life</p>
+				<p></p>
 			</div>
 		</div>
+		<br>
 		<div class = "row" id="copyright">
 			<div class="col-sm-12 col-md-12 col-lg-12" id ="copyright">
-				<p>© 2017, VinumVitae, All rights reserved</p>
+				<p>© 2017, Vinum Vitae, All rights reserved</p>
 			</div>
 		</div>
 
