--- a/searchmywine.html
+++ b/searchmywine.html
@@ -107,6 +107,8 @@
             <div class="col-sm-3 col-md-3 col-lg-3">
             </div> 
             <div class="col-sm-6 col-md-6 col-lg-6" id="lineon">
+            <div class = "tooManyMessage"><p>Too many results, please enter more information</p></div>
+            <div class = "noResults"><p>No results, please check your search</p></div>
                 <div class="row">
                     <div class="col-sm-12 col-md-12 col-lg-12" id="linetwo">
                     </div>  <!-- style for inside border for css -->
@@ -132,16 +134,14 @@
                     <div class="col-sm-1 col-md-1 col-lg-1">
                     </div>
                     <div class="col-sm-5 col-md-5 col-lg-5">
-                        <div class="searchbox">
+                        <div class="userdb">
                             <div class="container-1">
-                                <span class="icon"><i class="fa fa-search"></i></span>
-                                <input type="search" id="wine-input" type="submit" placeholder="Search Wine..."/>
+                                <button id= "user-db" class="btn btn-custom"><p>My Wine Cellar</p></button>
                             </div>
                         </div>
                         <br>
         <!--submit button-->
-                        <input id="select-wine" type="submit" value="Search Wine">
-                        <input id="clear-wine" type="button" value="Clear Results">
+                      <!--   <input id="select-wine" type="submit" value="Search Wine"> -->
                     </div>  
                 </div> <!--panel body-->
             </div>
