--- a/searchmywine.html
+++ b/searchmywine.html
@@ -136,12 +136,13 @@
                     <div class="col-sm-5 col-md-5 col-lg-5">
                         <div class="userdb">
                             <div class="container-1">
-                                <button id= "user-db" class="btn btn-custom"><p>My Wine Cellar</p></button>
+                                <button id= "user-db" class="btn btn-custom"><p>My Personal Wine Cellar</button>
                             </div>
                         </div>
                         <br>
         <!--submit button-->
-                      <!--   <input id="select-wine" type="submit" value="Search Wine"> -->
+<!--                         <input id="select-wine" type="submit" value="Search Wine">
+                        <input id="clear-wine" type="button" value="Clear Results"> -->
                     </div>  
                 </div> <!--panel body-->
             </div>
