--- a/searchmywine.html
+++ b/searchmywine.html
@@ -156,7 +156,7 @@
                 <div class="panel-heading" id="panelchange">
                     <h4 class="panel-title" style="font-size: 20px">Your Wine Cellar</h4>
                 </div>
-                <div class="panel-body" id="wine-div"></div>
+                <div class="panel-body" id="user-div"></div>
                 
             </div>
         </div>
