--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 							</div>
 
 							<div class="col-sm-11 col-md-11 col-lg-11" id="stylebox">
-							<p id="signininspiration">GET YOUR PERSONAL WINE CELLAR.</p>
+							<p id="signininspiration">GET YOUR PERSONAL WINE CELLAR</p>
 							<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span><a href="login.html">Log In</a></button>
 								
 							</div>
