--- a/index.html
+++ b/index.html
@@ -178,9 +178,11 @@
 						<div class = "row">
 							<div class="col-sm-1 col-md-1 col-lg-1">
 							</div>
+
 							<div class="col-sm-11 col-md-11 col-lg-11" id="stylebox">
-								<p id="signininspiration">GET YOUR PERSONAL WINE CELLAR.</p>
-								<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span><a href="login.html">Log In</a></button>
+							<p id="signininspiration">GET YOUR PERSONAL WINE CELLAR</p>
+							<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span><a href="login.html">Log In</a></button>
+								
 							</div>
 							<!-- <div class="col-sm-4 col-md-4 col-lg-4">
 								<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span><a href="login.html">Log In</a></button>
