--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
           <img class="navpic" src="app/public/images/WineLogo.png">
 
       </div>
-      <button class="button" type="login">Home</button>
+      <a class="button" href="index.html">Home<a><span class ="glyphicon glyphicon"></span></a></button>
     </div>
   </div>
   <br>
