--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
 	</script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	</script>
-	<script src="assets/js/app.js">-->
-	</script>
 	<link href="https://fonts.googleapis.com/css?family=Proxima-Nova" rel="stylesheet">
 	<link href="https://bootswatch.com/spacelab/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<link href="app/public/css/style.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js">
-	<link rel="apple-touch-icon" sizes="180x180" href="app/public/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="app/public/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="app/public/icons/favicon-16x16.png">
-    <link rel="manifest" href="app/public/icons/manifest.json">
+	<link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+    <link rel="manifest" href="icons/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5 ">
     <meta name="theme-color" content="#ffffff ">
 
@@ -32,7 +30,7 @@
 
 	<div class="row" id="main-header">
 		<div class="col-md-2" id="logo-image">
-			<img src="app/public/images/WineLogo.png" alt="VV Logo" style="width:210px; height: 85px; margin-top: 10px">
+			<img src="images/WineLogo.png" alt="VV Logo" style="width:210px; height: 85px; margin-top: 10px">
 			<br>
 			<br>
 			<br>
@@ -68,7 +66,7 @@
 			        		</div> <!--end col for text-->
 
 			        		<div class="col-md-5">
-			        			<img src="app/public/images/sunset.jpg" alt="Sonoma Sunset" style="width:500px; height: 270px; margin-top: 10px">
+			        			<img src="images/sunset.jpg" alt="Sonoma Sunset" style="width:500px; height: 270px; margin-top: 10px">
 			        		</div> <!--close col 5 for image -->
 			      		</div> <!--close row-->
 					</div>  <!-- end of slide one div -->
@@ -92,7 +90,7 @@
 			       			</div> <!-- end div for col 7 -->
 
 			       			<div class="col-md-5">
-			        			<img src="app/public/images/winebarrels.jpg" alt="Red Wine" style="width:500px; height: 270px; margin-top: 10px">
+			        			<img src="images/winebarrels.jpg" alt="Red Wine" style="width:500px; height: 270px; margin-top: 10px">
 			       			</div> <!--close col 5 for image -->
 			      		</div> <!--close row-->
 					</div>
@@ -115,7 +113,7 @@
 			       			</div> <!-- end div for col 7 -->
 
 			       			<div class="col-md-5">
-			        			<img src="app/public/images/beerimage.jpg" alt="Beer" style="width:500px; height: 270px; margin-top: 10px">
+			        			<img src="images/beerimage.jpg" alt="Beer" style="width:500px; height: 270px; margin-top: 10px">
 			       			</div> <!--close col 5 for image -->
 			      		</div> <!--close row-->
 					</div>
@@ -178,11 +176,9 @@
 						<div class = "row">
 							<div class="col-sm-1 col-md-1 col-lg-1">
 							</div>
-
 							<div class="col-sm-11 col-md-11 col-lg-11" id="stylebox">
-							<p id="signininspiration">GET YOUR PERSONAL WINE CELLAR</p>
-							<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span><a href="login.html">Log In</a></button>
-								
+								<p id="signininspiration">GET YOUR PERSONAL WINE CELLAR.</p>
+								<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span><a href="login.html">Log In</a></button>
 							</div>
 							<!-- <div class="col-sm-4 col-md-4 col-lg-4">
 								<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span><a href="login.html">Log In</a></button>
@@ -198,7 +194,7 @@
 					<div class="col-sm-1 col-md-1 col-lg-1">
 					</div>
 					<div class="col-sm-5 col-md-5 col-lg-5">
-						<p><img class="img-frontpage" src="app/public/images/newwineglass.jpg" alt="Wine Glass"></p>
+						<p><img class="img-frontpage" src="images/newwineglass.jpg" alt="Wine Glass"></p>
 					</div>
 				</div> <!--close panel paper background -->
 			</div>
@@ -224,7 +220,7 @@
 					<div class="col-sm-1 col-md-1 col-lg-1">
 					</div>
 					<div class="col-sm-5 col-md-5 col-lg-5">
-						<p><img class="img-frontpage" src="app/public/images/winetop.jpg" alt="Screenshot of alcohol database"></p>
+						<p><img class="img-frontpage" src="images/winetop.jpg" alt="Screenshot of alcohol database"></p>
 					</div>
 				</div>
 			
@@ -327,7 +323,7 @@
 		<div class="row">
 		<br>
 			<div class="col-sm-4 col-md-4 col-lg-4">
-				<p><img class="img-responsive" src="app/public/images/WhiteVNoBackground.png" alt="OurLogo"  id="footerlogo"></p>
+				<p><img class="img-responsive" src="images/WhiteVNoBackground.png" alt="OurLogo"  id="footerlogo"></p>
 			</div>
 
 			<div class="col-sm-4 col-md-4 col-lg-4" id ="develop">
@@ -352,6 +348,6 @@
 
 	</div> <!--footer-->
 	
-	<script type="text/javascript" src="function.js"></script>
+	<script type="text/javascript" src="js/function.js"></script>
 </body>
 </html>
